--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<h2>WEB Image</h2>
 	<img src="picture1.jpg" width="200" height="200">
 	<img src="picture2.jpg" width="200" height="200">
-	<img src="piktur/picture3.jpg" width="200" height="200">
+	<img src="picture3.jpg" width="200" height="200">
 
 </body>
 </html>
