--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 	<img src="picture1.jpg" width="200" height="200">
 	<img src="picture2.jpg" width="200" height="200">
 	<img src="picture3.jpg" width="200" height="200">
-
+	
+	<font face="Times New Roman" size="3" color="black">
+	<br>Sejarah Website Website pertama kali dibuat oleh Tim Berners-Lee pada akhir 1980an dan baru resmi online pada tahun 1991. 
+	Tujuan awal Tim Berners-Lee membuat sebuah website adalah supaya lebih memudahkan para peneliti di tempatnya bekerja ketika akan bertukar atau melakukan perubahan informasi.
 </body>
 </html>
