--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 	<hr>
 		<font face="Times New Roman" size="3" color="black">
 			Assalammualaikum wr.wb selamat datang di web saya disini saya akan memberikan sedikit informasi tentang <B>WEB.</B> <br>
-			World Wide Web atau WWW atau juga dikenal dengan WEB adalah salah satu layanan yang didapat oleh pemakai computer yang terhubung ke internet. Web ini menyediakan informasi bagi pemakai computer yang terhubung ke internet dari sekedar informasi “sampah” atau informasi yang tidak berguna sama sekali sampai informasi yang serius; dari informasi yang gratisan sampai informasi yang komersial. Website atau situs dapat diartikan sebagai kumpulan halaman-halaman yang digunakan untuk menampilkan informasi teks, gambar diam atau gerak, animasi, suara, dan atau gabungan dari semuanya 
+			World Wide Web atau WWW atau juga dikenal dengan WEB adalah salah satu layanan yang didapat oleh pemakai computer yang terhubung ke internet. 
+			Web ini menyediakan informasi bagi pemakai computer yang terhubung ke internet dari sekedar informasi “sampah” atau informasi yang tidak berguna sama sekali sampai informasi yang serius, dari informasi yang gratisan sampai informasi yang komersial. 
+			Website atau situs dapat diartikan sebagai kumpulan halaman-halaman yang digunakan untuk menampilkan informasi teks, gambar diam atau gerak, animasi, suara, dan atau gabungan dari semuanya 
 			itu baik yang bersifat statis maupun dinamis yang membentuk satu rangkaian bangunan yang saling terkait dimana masing-masing dihubungkan dengan jaringan-jaringan halaman (hyperlink).
 		</font> <br>
 	<h2>WEB Image</h2>
@@ -39,5 +41,6 @@
 	<font face="Times New Roman" size="3" color="black">
 	<br>Sejarah Website Website pertama kali dibuat oleh Tim Berners-Lee pada akhir 1980an dan baru resmi online pada tahun 1991. 
 	Tujuan awal Tim Berners-Lee membuat sebuah website adalah supaya lebih memudahkan para peneliti di tempatnya bekerja ketika akan bertukar atau melakukan perubahan informasi.
+	Website dapat dimiliki oleh individu, organisasi, atau perusahaan. Pada umumnya sebuah website akan menampilkan informasi atau satu topik tertentu, meskipun saat ini banyak website yang menampilkan berbagai informasi dengan topik yang berbeda.
 </body>
 </html>
