--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
 	<img src="picture1.jpg" width="200" height="200">
 	<img src="picture2.jpg" width="200" height="200">
 	<img src="picture3.jpg" width="200" height="200">
-	
+		<font face="Times New Roman" size="5" color="black">
+	<i>Sejarah Website</i></font><br>
 	<font face="Times New Roman" size="3" color="black">
-	<br><B>Sejarah Website</B><br>
-	Website pertama kali dibuat oleh Tim Berners-Lee pada akhir 1980an dan baru resmi online pada tahun 1991. Tujuan awal Tim Berners-Lee membuat sebuah website adalah supaya lebih memudahkan para peneliti di tempatnya bekerja ketika akan bertukar atau melakukan perubahan informasi. 
+	Website pertama kali dibuat oleh Tim Berners-Lee pada akhir 1980an dan baru resmi online pada tahun 1991. 
+	Tujuan awal Tim Berners-Lee membuat sebuah website adalah supaya lebih memudahkan para peneliti di tempatnya bekerja ketika akan bertukar atau melakukan perubahan informasi. 
 	Website dapat dimiliki oleh individu, organisasi, atau perusahaan. Pada umumnya sebuah website akan menampilkan informasi atau satu topik tertentu, meskipun saat ini banyak website yang menampilkan berbagai informasi dengan topik yang berbeda.
+	</font>
 </body>
 </html>
