--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 	<h2>WEB Image</h2>
 	<img src="picture1.jpg" width="200" height="200">
 	<img src="picture2.jpg" width="200" height="200">
-	<img src="picture3.jpg" width="200" height="200"><br>
+	<img src="picture3.jpg" width="200" height="200">
 		
-	<font face="Times New Roman" size="5" color="black">
+	<br><font face="Times New Roman" size="5" color="black">
 	<i>Sejarah Website</i></font><br>
 	<font face="Times New Roman" size="3" color="black">
 	Website pertama kali dibuat oleh Tim Berners-Lee pada akhir 1980an dan baru resmi online pada tahun 1991. 
